[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Other/Background_WW.png" type="Texture" id=2]
[ext_resource path="res://Assets/Other/Menu.png" type="Texture" id=3]
[ext_resource path="res://Demo_Game.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Font/Xolonium-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Other/Game Over.jpeg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Game" type="Node"]
script = ExtResource( 1 )
game = ExtResource( 4 )

[node name="New_game" type="Node" parent="."]

[node name="Menu" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 480.0
__meta__ = {
"_edit_group_": true
}

[node name="YSort" type="YSort" parent="Menu"]

[node name="Menu sprite" type="TextureRect" parent="Menu/YSort"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 155.0
margin_top = 35.0
margin_right = 1179.0
margin_bottom = 1059.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="Menu/YSort"]
margin_right = 720.0
margin_bottom = 480.0
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="Menu/YSort"]
show_behind_parent = true
margin_left = 369.0
margin_top = 149.0
margin_right = 489.0
margin_bottom = 186.0

[node name="Game Over" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Game Over"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.71, 0.47 )
texture = ExtResource( 6 )

[node name="Restart" type="Button" parent="Game Over"]
margin_left = 325.0
margin_top = 350.0
margin_right = 402.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
text = "Restart"

[connection signal="pressed" from="Menu/YSort/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Game Over/Restart" to="." method="_on_Restart_pressed"]
